[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Vitor Santanna <vitor_anna@id.uff.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg = "^3.1.19"
django-split-settings = "^1.3.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
